--- a/Libro.tex
+++ b/Libro.tex
@@ -133,100 +133,31 @@ Se pensiamo agli uomini primitivi, è possibile che siano stati gli individui pi
 
 Preferiremmo quindi essere animali felici, o tenerci l'insoddisfazione, ma continuare a migliorare, imparare, leggere, immaginare, costruire ecc? 
 
+\subsubsection{Conformismo sociale}
+La nostra sopravvivenza ha beneficiato notevolmente dalla condivisione di risorse e dall’organizzazione sociale. 
+Così gli individui che sapevano collaborare e amalgamarsi meglio al gruppo venivano premiati dalle risorse condivise, mentre al contrario, chi non aderiva alle norme sociali veniva ostracizzato e allontanato dal gruppo, condizione che in contesti ancestrali, diminuiva drasticamente il rischio per la sopravvivenza dell'individuo.
 
+Termini come filter Bubble, echo-chamber ed effeto bandwagon con sfumature diverse nascono per descrivere una tendenza innata al conformismo sociale.
 
-
-
-
-\subsubsection{Filter Bubble e Echo-chamber}
-Il web, in particolare social network e motori di ricerca, al fine di offrire un'esperienza percepita come più rilevante e coinvolgente ai propri utenti (e per altri scopi, tra cui commerciali), crea dei risultati personalizzati. Se io faccio una ricerca su YouTube, sto indirettamente comunicando
-all'algoritmo le mie preferenze, i miei gusti, e quest'ultimo in futuro
-cercherà di fornirmi contenuti in linea con ciò che stima potrebbe interessarmi. Questa funzionalità ha però un effetto
-collaterale, facciamo un esempio:
-
-Se fossi di un certo orientamento politico e volessi informarmi su una nuova proposta di legge ideata dal partito di
-opposizione, probabilmente troverò informazioni che mi spiegano tutti i punti critici di questo decreto o articoli
-scritti da giornalisti o utenti della mia fazione politica. Viceversa, se fossi del partito di opposizione, troverei
-articoli che mettono in luce principalmente i punti forti di questo progetto.
-
-Questo meccanismo tende a rafforzare le nostre convinzioni esistenti, rendendo più difficile, ma non impossibile cambiare idea: è un esempio di bias di conferma, un fenomeno cognitivo che ci porta a cercare e privilegiare le informazioni coerenti con ciò che già crediamo.
-
-Questo problema non è solo dei motori di ricerca e social network, ma affonda le sue radici nelle tendenze cognitive dell'essere umano. Prima dell'avvento di internet le persone compravano i
-giornali e guardavano telegiornali della propria fazione politica. Il web, in un certo senso, ci presenta contenuti che rispecchiano le nostre preferenze, similmente a come in passato si sceglieva un giornale in linea con le proprie idee.
-
-Sapendo di questo filtro che distorce la realtà, dovremmo quindi cercare di mettere il più possibile in dubbio e criticamente le
-nostre convinzioni, prendendo e valutando in maniera onesta e distaccata anche le fonti contrarie alle nostre.
+La Filter Bubble e la Echo Chamber rappresentano il moderno isolamento digitale: la prima è la barriera invisibile creata dagli algoritmi che ci mostrano solo ciò che ci piace, la seconda è lo spazio sociale dove le nostre idee rimbalzano e si rafforzano tra persone simili.
+Questo fenomeno, tuttavia, non è nato con i social. Anche prima di internet vivevamo in "bolle" analogiche: basti pensare a chi leggeva esclusivamente il giornale della propria fazione politica, filtrando la realtà attraverso una testata amica e evitando le opinioni opposte. La differenza è che oggi questo isolamento non è più una scelta consapevole, ma un automatismo silenzioso della tecnologia.
 
 È difficile evitare del tutto una filter bubble, ma possiamo limitarne gli effetti esponendoci consapevolmente a fonti e opinioni diverse.
 
 \begin{mdframed}[linewidth=1pt]
 Il telefono ci ascolta davvero?
 
-Molti di noi hanno avuto la sensazione inquietante di parlare di un argomento e, poco dopo, vedere comparire pubblicità ad esso legate. Questo ha alimentato la diffusa convinzione che il telefono ci ascolti in segreto. In realtà, secondo le ricerche finora disponibili, non sono emerse prove che i dispositivi mobili registrino costantemente le nostre conversazioni per fini pubblicitari. Il motivo per cui riceviamo annunci così mirati è più sottile: si tratta di una combinazione di tracciamento digitale avanzato e di meccanismi psicologici. Le app e i siti raccolgono enormi quantità di dati sul nostro comportamento online, dalle ricerche effettuate alla posizione geografica, passando per le interazioni con altre persone. Questo consente agli algoritmi pubblicitari di prevedere con sorprendente precisione i nostri interessi, senza dover ascoltare nulla. Inoltre, un fenomeno noto come “illusione di frequenza” o “effetto Baader-Meinhof” ci porta a notare maggiormente ciò che ci è appena venuto in mente, facendoci credere che sia comparso “dal nulla”. In definitiva, sebbene non si tratti di intercettazioni nel senso tradizionale, siamo oggetto di un'osservazione da parte di sistemi predittivi estremamente sofisticati, con implicazioni per la nostra privacy.
+Molti di noi hanno avuto la sensazione di parlare di un argomento e, poco dopo, vedere comparire pubblicità correlare. Questo ha alimentato la diffusa convinzione che il telefono ci ascolti in segreto. In realtà, secondo le ricerche finora disponibili, non sono emerse prove che i dispositivi mobili registrino costantemente le nostre conversazioni per fini pubblicitari. Il motivo per cui riceviamo annunci così mirati è più sottile: si tratta di una combinazione di tracciamento digitale e di meccanismi psicologici. Le app e i siti raccolgono enormi quantità di dati sul nostro comportamento online. Questo consente agli algoritmi pubblicitari di prevedere con sorprendente precisione i nostri interessi, senza dover ascoltare nulla. Inoltre tendiamo a fare caso alle poche volte che indovina benissimo ma non alle tante volte che sbaglia.
 \end{mdframed}
 
-\subsubsection{Effetto Bandwagon}
-L'effetto Bandwagon, noto anche come effetto carrozzone o conformismo, è un fenomeno psicologico e
-sociale che descrive la tendenza delle persone a fare qualcosa principalmente perché altre persone lo stanno facendo,
-indipendentemente dalle proprie convinzioni. Questo comportamento è spesso osservato in vari contesti, come la
-politica, l'economia e le scelte di consumo. In politica, ad esempio, può manifestarsi quando gli
-elettori scelgono di votare per un candidato che sembra avere maggiori possibilità di vincere, piuttosto che basare la
-loro decisione su un'analisi critica delle politiche del candidato. In economia,
-l'effetto può influenzare le decisioni di acquisto dei consumatori, dove la popolarità di un
-prodotto può aumentare semplicemente perché molte persone lo stanno acquistando.
-
-\begin{mdframed}[linewidth=1pt]
-In uno studio classico (smoke-filled room experiment), se i partecipanti erano soli in una stanza con del fumo che entrava, segnalavano prontamente il pericolo. Quando erano presenti attori che ignoravano la situazione, la maggior parte dei soggetti si conformava e non interveniva, spesso restando in silenzio nonostante il disagio.
-
-L'esperimento ideato dallo psicologo sociale polacco Solomon Asch nel 1956 consisteva nel mostrare ai partecipanti un
-immagine con delle linee e chiedere quale fosse la linea più lunga. Il gruppo era composto da attori istruiti a dare la
+Nell'esperimento ideato dallo psicologo sociale polacco Solomon Asch nel 1956 consisteva nel mostrare ai partecipanti delle linee e chiedere quale fosse la più lunga. Il gruppo era composto da attori istruiti a dare la
 risposta sbagliata e un partecipante. Nell'esperimento, circa il 75\% dei partecipanti si è conformato almeno una volta alla risposta sbagliata della maggioranza, mentre solo il 25\% ha mantenuto sempre la propria risposta indipendente.
 
-Nel 1962, in un altro esperimento, in una sala d'attesa, tutti gli attori si alzavano al suono di un campanello, tranne una persona ignara. Dopo qualche minuto, anche la vittima si alzava, seguendo il gruppo. Poi, gli attori uscivano uno per uno, lasciando la vittima da sola. Alla fine, anche quando non c'era più nessuno nella stanza, la vittima continuava ad alzarsi al suono del campanello.
+Celebri sono stati i controversi esperimenti, per via delle critiche metodologiche, di Stanley Milgram e di Philip Zimbardo del carcere di Stanford, dove studenti che dovevano recitare il ruolo di guardie sono diventati sempre più violente a livello fisico e psicologico umiliando quelli che recitavano il ruolo di carcerati, costringendoli a cantare canzoncine, defecare in secchi che non potevano vuotare, pulire le latrine a mani nude ecc… 
 
-Va però detto che ci sono anche studi che osservano una tendenza opposta. Recentemente una nuova ricerca di Richard
-Philpot della Lancaster University (UK) ha analizzato casi di violenza ripresi dalle telecamere e, ha notato che nel
-90\% degli eventi, almeno una persona interveniva e, spesso più di una. Sorprendentemente, i dati osservano che in contesti reali la probabilità di intervento era alta, e non diminuiva necessariamente con l’aumentare del numero di presenti, contrariamente a quanto previsto dal classico bystander effect.
+L’ambiente e le strutture istituzionali possono avere un forte impatto sul comportamento individuale, soprattutto in situazioni dove sono percepite come autorità legittime o inevitabili, talvolta portando a una diminuzione della percezione di paura, vergogna o pietà.
 
-Esperimento carcerario di Stanford 
-
-Nell'agosto del 1971, il professore di psicologia dell'università di Stanford,
-Philip Zimbardo fece un esperimento che passò alla storia nel tentativo di rispondere alla domanda: Il male è una cosa
-innata in noi? O tutti potremmo essere malvagi?
-
-L'esperimento si svolse nei sotterranei dell'università di Stanford, dove
-venne allestita una finta prigione. Vennero poi selezionati venti studenti universitari, selezionati fra quelli più
-equilibrati, per poi essere divisi casualmente in due gruppi, carcerati e prigionieri. Per far calare meglio nella
-parte i due gruppi, oltre all'ambientazione, gli sono stati dati degli abiti da carcerati e da
-guardie. I detenuti si dovevano rivolgere con rispetto alle guardie e, al contrario, loro venivano chiamati con il numero
-che avevano cucito sul camice. I detenuti dormivano nelle brandine del finto carcere, mentre le guardie svolgevano dei
-turni da otto ore. L'esperimento sarebbe dovuto durate due settimane, ma venne interrotto solo dopo
-cinque giorni.
-
-Le guardie infatti iniziarono a diventare sempre più violente a livello fisico e psicologico. Umiliavano i carcerati,
-costringendoli a cantare canzoncine, defecare in secchi che non potevano vuotare, pulire le latrine a mani nude ecc…
-Dopo un tentativo di evasione, che è stato represso con forza, Zimbardo interrompe l'esperimento,
-in quanto alcuni partecipanti stavano manifestando sottomissione, ansia, crisi, disturbi, fragilità, sadismo.
-
-L’ambiente e le strutture istituzionali possono avere un forte impatto sul comportamento individuale, soprattutto in situazioni dove sono percepite come autorità legittime o inevitabili.
-L'assunzione di un ruolo istituzionale e l'osservanza rigida delle regole possono influenzare profondamente il comportamento individuale, talvolta portando a una diminuzione della percezione di paura, vergogna o pietà, che normalmente modulano le azioni. In tali contesti, la pressione a uniformarsi al volere collettivo del gruppo può ridurre significativamente l'autonomia comportamentale del soggetto, sebbene la capacità di resistenza individuale rimanga un fattore importante.
-
-Hannah Arendt lo definì la “banalità del male”, la messa in discussione dell'idea che il male sia
-prerogativa dei “mostri”, diversi dalle persone comuni, diversi da noi e, che anche noi, non siamo immuni dal rischio
-di commettere azioni terribili.
-
-Questi eventi sono stati descritti nel libro L'effetto Lucifero di Philip Zimbardo, un’opera influente, ma anche controversa per via delle critiche metodologiche ricevute nel tempo\endnote{\raggedright\url{https://it.wikipedia.org/wiki/Effetto\_Lucifero\_(film)}} \endnote{\raggedright\url{https://it.wikipedia.org/wiki/The\_Experiment\_(film\_2010)}}.
-
-Un esperimento correlato fu condotto nel 1961 Stanley Milgram della Yale University si chiedeva come regimi autoritari, come quello nazista, avessero potuto spingere persone comuni a obbedire ordini disumani. Milgram crea un esperimento, dove un suo collaboratore si siederà su una finta sedia elettrica con voltaggi che vanno da 15 a 450 volt. Milgram interrogherà questa persona e ad ogni risposta errata ordinerà a dei volontari, ignari della finzione, di dare la scossa e, il voltaggio, aumenterà di volta in volta fino ad arrivare a livelli indicati sull'apparecchio come "altamente pericolosi". Se un soggetto arriva a disobbedire l'esperimento termina.
-
-Ai partecipanti viene fatta provare una carica da 45 volt per avere un paragone delle scosse che daranno. Al raggiungimento dei 300 volt la vittima/collaboratore non fornirà più alcuna risposta alle domande.
-
-Ogni volta che il partecipante avrà dei dubbi sul dare la scossa o meno, Milgram risponderà: Per favore, vada avanti.
-
-A fine esperimento sono stati intervistati i soggetti che confermarono di essere consapevoli del dolore che stavano infliggendo. 
-
-I risultati sono stati: Tutti i partecipanti arrivarono ad almeno 300V, e circa 26 su 40 (65\%) somministrarono la scarica massima di 450V. 
-\end{mdframed}
+Hannah Arendt lo definì la “banalità del male”, la messa in discussione dell'idea che il male sia prerogativa dei “mostri” e, invece, anche noi, nelle giuste condizioni potremmo commettere azioni terribili.
 
 \needspace{4cm}
 \subsubsection{Effetto Dunning-Kruger}
@@ -240,64 +171,25 @@ I risultati sono stati: Tutti i partecipanti arrivarono ad almeno 300V, e circa 
 \end{wrapfigure}
 
 L'effetto Dunning-Kruger studiato dagli psicologi David Dunning e Justin
-Kruger\endnote{\raggedright\url{https://it.wikipedia.org/wiki/Effetto\_Dunning-Kruger}} è una distorsione cognitiva, dove tendiamo a
-sopravvalutare le nostre conoscenze. Sebbene il grafico comunemente associato al fenomeno non provenga dallo studio originale, illustra efficacemente questa percezione distorta iniziale: quando ci cimentiamo in una nuova materia la percezione delle nostre conoscenze (linea blu) è molto più alta delle nostre effettive competenze (linea rossa). Sappiamo quanto sappiamo, ma non avendo un quadro completo non sappiamo quanto ancora
-c'è da sapere per auto valutare la percentuale del totale della nostra comprensione.
+Kruger\endnote{\raggedright\url{https://it.wikipedia.org/wiki/Effetto\_Dunning-Kruger}} è una distorsione cognitiva, dove tendiamo a sopravvalutare le nostre conoscenze. Sebbene il grafico comunemente associato al fenomeno non provenga dallo studio originale, illustra efficacemente questa percezione distorta: quando ci cimentiamo in una nuova materia la percezione delle nostre conoscenze (linea blu) è molto più alta delle nostre effettive competenze (linea rossa). Sappiamo quanto sappiamo, ma non avendo un quadro completo non sappiamo quanto ancora c'è da sapere per auto valutare la percentuale del totale della nostra comprensione.
 
-Bertrand Russell "Il problema dell'umanità è che gli stupidi sono strasicuri,
-mentre gli intelligenti sono pieni di dubbi"
+Bertrand Russell "Il problema dell'umanità è che gli stupidi sono strasicuri, mentre gli intelligenti sono pieni di dubbi"
 
-Più ci si addentra nello studio e nella conoscenza, più ci si rende conto delle innumerevoli ramificazioni del sapere. La
-conoscenza diviene pertanto un processo in divenire e mai del tutto esaurito. 
+Più ci si addentra nello studio e nella conoscenza, più ci si rende conto delle innumerevoli ramificazioni del sapere. La conoscenza diviene pertanto un processo in divenire e mai del tutto esaurito. 
 
-Il nostro cervello per poter fare qualcosa per la prima volta lo simula preventivamente nella mente tramite
-l'immaginazione. Vi sarà capitato anche a voi di vedere, un equilibrista, un tuffatore, un
-musicista, un influencer e dire, non sembra difficile! Questo perché nella vostra simulazione mentale siete riusciti a farlo senza intoppi! Questa illusione iniziale potrebbe, in certi casi, avere un effetto motivante. Tuttavia, può anche portare a sottovalutare le difficoltà reali e compromettere l’apprendimento o la performance. Può essere però un'arma a doppio taglio siccome ci può dare l'illusione di aver acquisito una
-certa competenza.
+Un fenomeno speculare è la sindrome dell'impostore, che porta l'individuo a credere di non meritare i propri traguardi perché pensa siano dovuti al caso, dalla fortuna o dalla sopravvalutazione degli altri. Paradossalmente però, se fossi un vero impostore, difficilmente sperimenteresti questa sindrome in quanto non metteresti in dubbio le tue capacità. Non stai cercando di truffare qualcuno, ma provando solo a fare un buon lavoro. 
 
-Un fenomeno psicologico spesso considerato speculare è la sindrome dell'impostore, che porta
-l'individuo a credere di non meritare i propri traguardi perché crede invece essere dovuti dal
-caso, dalla fortuna o dalla sopravvalutazione degli altri. Paradossalmente però, se fossi un vero impostore, difficilmente sperimenteresti la sindrome dell'impostore in quanto non metteresti in dubbio le tue capacità. Non stai cercando di
-truffare qualcuno, ma provando solo a fare un buon lavoro. Il fatto di interrogarsi sulle proprie capacità è positivo,
-ci porta a migliorare e non finire vittima dell'effetto Dunning-Kruger.
 
-\subsubsection{Fattore culturale}
-Nell'Africa sub-Sahariana, in lingua bantu esiste la parola ubuntu. Appellandosi a questa parola si è soliti dire Umuntu
-ngumuntu ngabantu, "io sono ciò che sono in virtù di ciò che tutti siamo". L'ubuntu esorta
-a sostenersi e aiutarsi reciprocamente, a prendere coscienza non solo dei propri diritti, ma anche dei propri doveri,
-poiché è una spinta ideale verso l'umanità intera, un desiderio di
-pace\endnote{\raggedright\url{https://it.wikipedia.org/wiki/Ubuntu\_(filosofia)}}. La cooperazione tra umani si è evoluta anche perché, a differenza di molti predatori, la nostra sopravvivenza ha beneficiato notevolmente dalla condivisione di risorse e dall’organizzazione sociale. 
-Quindi gli individui che sapevano collaborare e amalgamarsi meglio alle regole
-del gruppo venivano premiati dalle risorse condivise, mentre al contrario, chi non aderiva alle norme sociali veniva
-ostracizzato e allontanato dal gruppo, condizione che in contesti ancestrali, spesso aumentava drasticamente il rischio per la sopravvivenza dell'individuo.
 
-Anche tra gli esseri umani, alcune ostilità e divisioni possono perpetuarsi nel tempo per via della trasmissione culturale, anche quando si è perso il contesto o la motivazione originaria. In Giamaica nel periodo di lotta per
-l'indipendenza dall'Inghilterra si sono formati due partiti in lotta violenta
-e armata fra loro: il People's National Party (PNP) e il Jamaica Labour Party (JLP). Nonostante la Giamaica oggi sia
-indipendente, la capitale, Kingston, è una delle città più violente al mondo per tasso di omicidi.
-Tutt'ora persistono delle zone dove l'accesso è fortemente limitato per chi proviene da territori considerati 'nemici'. Questa divisione, spesso radicata in conflitti passati, si è sedimentata nel tempo, al punto che per molti le ragioni storiche precise possono essere diventate meno chiare, lasciando spazio a una perpetuazione basata sulla tradizione e sull'identità di gruppo.
 
-Secondo una ricerca pubblicata su JNeurosci\endnote{\raggedright\url{https://www.jneurosci.org/content/early/2025/08/18/JNEUROSCI.1018-25.2025}}, l'aggressività può essere contagiosa, principalmente se la si osserva in amici e familiari. Lo studio, condotto su topi maschi, ha osservato che i roditori che assistevano a un attacco da parte di un familiare diventavano a loro volta aggressivi, a differenza di quelli che osservavano l'aggressività in esemplari sconosciuti.
 
-Questo è un ulteriore tassello per comprendere quanto sia importante la consapevolezza. Se facciamo qualcosa e ignoriamo
-il momento in cui abbiamo deciso di fare questa scelta e il processo cognitivo che l'ha preceduta, probabilmente è un comportamento appreso da modelli esterni e meno influenzato dal nostro pensiero. Questo può succedere a
-tutti, ma è importante ripensare a ciò che facciamo o se possibile accorgerci mentre ci capita e interrogarci,
-chiedendoci se questa azione è in linea con i nostri valori, altrimenti potremmo trovarci a seguire direzioni non del tutto allineate con i nostri valori, con il rischio di agire in maniera inautentica.
 
-Per dare alla vita la direzione che vogliamo ed essere più autentici, è talvolta necessario accettare la possibilità di deludere le aspettative altrui.
-Dovremmo chiederci: sto agendo in modo coerente con ciò che ho scoperto essere? Con ciò che onestamente credo essere giusto? Non ho danneggiato gli altri? Se le risposte a queste domande sono affermative, allora la critica degli altri, pur restando da considerare, potrebbe assumere un peso differente nella nostra valutazione personale. Tutto questo discorso non vuole sminuire ciò che gli altri mi possono dire, anche questo è importante, ma non rappresenta necessariamente la verità.
-L'opinione altrui andrebbe valutata in modo differito, quindi non reagendo a caldo, ma prendendoci del tempo, anche giorni, per pensarci su. Tante volte le cose che ci vengono dette, dicono più degli altri che di noi stessi.
-Abbiamo detto del come, del quando, ma di chi dare peso alle opinioni? Da chi si è guadagnato la nostra stima.
-Noi siamo il risultato delle nostre azioni, delle nostre scelte, quelle giuste e quelle che abbiamo riconosciuto come sbagliate. Non dovremmo sentirci costretti a cambiare per conformarci alle aspettative altrui. Gli altri possono scegliere se stare con noi o no. Questa è la persona che sono oggi, e penso sia giusto fare le mie scelte, e tracciare, con anche gli errori, la mia via.
-Prendere in considerazione il parere altrui è positivo, ma poi seguirlo non è un obbligo. 
 
 \begin{mdframed}[linewidth=1pt]
 Stigma del fallimento
 
-Noi europei, in particolare gli italiani, spesso viviamo il fallimento con vergogna. Dobbiamo essere sempre
-perfetti, informati, produttivi, risolutivi, ma questo è impossibile in un mondo complesso dove
-l'asticella continua ad alzarsi. Cosa ci sarebbe di male se non sapessimo fare qualcosa? o se non
-conosciamo qualcosa? o se abbiamo bisogno di aiuto? Non solo, è molto difficile fare qualcosa di nuovo senza fallire. Se non fallisci forse non ti stai ponendo obiettivi ambiziosi (e andrebbe bene anche così).
+Noi europei, spesso viviamo il fallimento con vergogna. Dobbiamo essere sempre
+perfetti, informati, produttivi, ma questo è impossibile in un mondo complesso dove l'asticella continua ad alzarsi. Cosa ci sarebbe di male se non sapessimo qualcosa? o se avessimo bisogno di aiuto? Non solo, è molto difficile fare qualcosa di nuovo senza sbagliare. Se non fallisci forse non ti stai ponendo obiettivi ambiziosi (e andrebbe bene anche così).
 
 Thomas Edison raccontò che fece numerosi tentativi prima di riuscire ad accendere la prima lampadina. Henry Ford affrontò due crac, poi fondò la Ford Motor Company. Gli esempi potrebbero continuare ad oltranza.
 
@@ -2539,7 +2431,6 @@ Qui di seguito possiamo vedere qual è l'introito calorico mediamente necessario
         ymin=1200, ymax=3000,
         xtick={20, 40, 60, 80},
         ytick={1200, 1500, 1800, 2100, 2400, 2700, 3000},
-        % --- Modifiche Legenda ---
         legend style={
             draw=none,
             at={(0.5,-0.18)},
@@ -2553,7 +2444,6 @@ Qui di seguito possiamo vedere qual è l'introito calorico mediamente necessario
         line width=1.5pt
     ]
 
-    % --- UOMO ---
     \addplot[color=blue!80!black, mark=square*, solid]
         coordinates {(20,2650)(40,2850)(60,2650)(80,2350)};
     \addlegendentry{Uomo attivo}
@@ -2562,7 +2452,6 @@ Qui di seguito possiamo vedere qual è l'introito calorico mediamente necessario
         coordinates {(20,2650)(40,2400)(60,2050)(80,1650)};
     \addlegendentry{Uomo Sarcopenico}
 
-    % --- DONNA ---
     \addplot[color=red!80!black, mark=*, solid]
         coordinates {(20,2050)(40,2200)(60,2050)(80,1850)};
     \addlegendentry{Donna attiva}
