--- a/Libro.tex
+++ b/Libro.tex
@@ -211,89 +211,26 @@ Il problema dell'umanità è che gli stupidi sono strasicuri, mentre gli intelli
 \end{itemize}
 
 \textbf{Libero Arbitrio}
-Prendiamo decisioni attraverso schemi mentali o automatismi fallaci, bias cognitivi, di cui non ci rendiamo conto. I
-bias cognitivi che abbiamo visto precedentemente sono comuni, con percentuali più o meno diverse. In più,
-ognuno di noi sviluppa degli schemi mentali suoi, che sono unici, ma di cui non sempre ne è a conoscenza, ma da cui può
-dipendere la propria vita e le proprie decisioni. Proprio ora, mentre stai leggendo, sei consapevole della tua
-posizione? Come sono posizionati i tuoi arti? Qualcuno di voi avrà le gambe accavallate, incrociate, o con una mano che
-sorregge la testa ecc… Ora che l'hai letto, sei consapevole della posizione che ha assunto il tuo
-corpo, ma fino a un attimo fa no. Eppure è stato il tuo cervello a metterti in quella posizione e, continuava a mandare
-impulsi affinché tu mantenessi quella posa. Hai scelto di metterti in quella posa? O l'ha scelto
-il tuo cervello? E come mai ha scelto proprio quella e non un'altra? A volte capita che guidando
-l'auto per andare al supermercato, siamo sovrappensiero e ci ritroviamo a casa. Oltre a gestire i nostri sistemi, che ci consentono di sopravvivere, come far battere il cuore, respirare ecc… il nostro cervello
-è in ascolto dei nostri cinque sensi. Se ci arriva qualcosa in faccia all'improvviso,
-chiudiamo gli occhi, giriamo la testa e ci proteggiamo con le mani, senza nemmeno pensarci. Se in una stanza rumorosa
-stiamo leggendo, riusciamo a isolarci da tutte le parole e, riusciamo a non seguire i discorsi degli altri, ma se
-qualcuno ci chiama, noi ci accorgiamo. Questo vuol dire che in realtà il nostro cervello ha analizzato i vari suoni,
-li ha convertiti in parole, li ha analizzati e valutato che tutte le parole non dovevano essere mostrate
-alla consapevolezza, alla nostra attenzione, tranne una, che invece poteva interessargli. Questi automatismi, questi
-nostri schemi mentali, riguardano solo queste azioni automatiche? In realtà no, come vedremo nel capitolo sui
-dibattiti, molte delle nostre decisioni, soprattutto quelle più rapide o complesse, sono fortemente influenzate da fattori emotivi. Tendiamo a valutare ciò che è 'giusto' o 'sbagliato' anche in base alle nostre reazioni istintive e preferenze, e solo in un secondo momento possiamo costruire una giustificazione razionale della nostra scelta, talvolta convincendoci della sua logicità.
-Anche quando cerchiamo di prendere una decisione con il ragionamento, mettendoci in discussione, con il massimo
-dell'onestà intellettuale, il nostro dialogo interiore, sebbene possa esplorare diverse prospettive, seguirà inevitabilmente un percorso influenzato, se non plasmato, dai nostri schemi mentali preesistenti.
+Il nostro cervello e formato da neuroni che sono collegati tra loro da sinapsi. Se dobbiamo raggiungere un luogo che non conosciamo, come un nuovo posto di lavoro, la prima volta chiederemo informazioni, guarderemo i cartelli, alla fine riusciremo ad arrivare a destinazione, facendo anche strade sbagliate. 
+Questa nostra esperienza avrà creato delle nuove connessioni neuronali seppur deboli. Il giorno seguente, andando al lavoro, potremmo commettere ancora degli errori, ma meno di ieri. Questa esperienza rafforzerà alcune connessioni neuronali e ne abbandonerà altre. Nei giorni seguenti potremmo sperimentare nuove strade per metterci meno tempo e evitare il traffico. Una volta individuata la strada secondo noi migliore, tutti i giorni percorreremo probabilmente sempre la stessa strada e, quelle connessioni neuronali, che ci permettono di fare quel percorso, diventano sempre più forti, creando uno scherma mentale forte. Quando si hanno connessioni forti, in un certo contesto, si potrebbe sperimentare un'elasticità mentale minore. Per questo può essere utile fare alcuni esercizi come, cambiare strada per tornare a casa o sedersi a tavola in posti diversi da quelli usuali.
 
-In modo simile a quanto osservato nell'esempio della postura, alcuni studi suggeriscono che, in certi contesti, il cervello possa avviare un'azione prima che se ne divenga pienamente consapevoli. In questi casi, la sensazione di aver preso una decisione cosciente potrebbe emergere solo dopo che il processo è già iniziato a livello neurale. Questo fenomeno, sebbene oggetto di intenso dibattito, ha portato alcuni a postulare che il libero arbitrio, almeno per certi tipi di decisioni, possa essere in parte un'illusione o un'interpretazione a posteriori. Il nostro cervello ha sviluppato quindi questa strategia per
-essere più efficiente, prendere decisioni immediate, come i riflessi, senza sottoporle alla coscienza, che è più lenta
-nell'elaborazione. Il cervello, per essere veloce, non mette in discussione ogni singola
-questione, anzi, non lo fa nella maggioranza dei casi. Il cervello approssima, etichettando, dando un nome a un determinato fenomeno e,
-attuando simili soluzioni, che ha visto funzionare in passato, per un evento che reputa dello stesso tipo.
-Questa strategia è efficiente in termini di velocità decisionale, ma meno nell'accuratezza. Questo pregiudizio, ovvero, giudicato prima, prima di un'attenta, ma lenta analisi, tende a semplificare e trovare pattern anche dove non ci sono (apofenia), il che può favorire la formazione di superstizioni, credenze pseudoscientifiche o credenza in teorie del complotto. La vita
-moderna ci sottopone continuamente a una moltitudine di informazioni, di sollecitazioni e il nostro cervello fatica ad elaborare tutto. Così, gli stessi schemi mentali o automatismi, necessari e che funzionano bene per la maggioranza di casi, possono essere applicati anche in altri contesti, inclusi quelli che coinvolgono decisioni etiche e morali, non sempre con gli stessi risultati ottimali. 
-Ad esempio, quando controlliamo compulsivamente le notifiche sul telefono, spesso potrebbe non essere una scelta consapevole. Arriva una notifica e in automatico, meccanicamente, tanti di noi guardano il telefono, senza che ci sia un pensiero che ci chieda quanto sia utile in questo momento, questo comportamento. Questi risultati suggeriscono che il libero arbitrio potrebbe essere limitato in compiti semplici automatizzati, ma la sua estensione nella vita reale, più complessa, richiede ulteriori ricerche. Anche se riuscissimo a liberarci dalla dipendenza dal telefono, continueremmo comunque a ricevere incessanti stimoli esterni che possono influenzare le nostre azioni influenzate dai nostri schemi mentali.
-
-Come si formano gli schemi mentali? Il nostro cervello e formato da neuroni che sono collegati tra loro da sinapsi. Se dobbiamo
-raggiungere un luogo che non conosciamo, per esempio un nuovo posto di lavoro, la prima volta chiederemo informazioni,
-guarderemo i cartelli, alla fine riusciremo ad arrivare fino alla nostra destinazione, magari un po' a tentativi anche
-e, facendo strade sbagliate. Questa nostra esperienza avrà creato delle nuove connessioni neuronali, delle sinapsi. Ora
-abbiamo diversi nuovi collegamenti, anche se deboli. Il giorno dopo ci troveremo a raggiungere nuovamente il posto di
-lavoro, abbiamo capito la zona e fino a li ci arriviamo senza problemi, magari sbagliamo ancora un paio di svolte, ma è
-comunque andata meglio del giorno prima. Con questa nuova esperienza, inizieremo a rafforzare alcune connessioni
-neuronali e abbandonarne altre. I primi giorni impareremo a raggiungere il luogo di lavoro, in più, sperimenteremo
-nuove strade, per metterci meno tempo, evitare il traffico ecc… Una volta che troviamo la strada secondo noi migliore,
-tutti i giorni percorreremo sempre la stessa strada e quelle connessioni neuronali, che ci permettono di raggiungere il
-posto di lavoro, facendo quel preciso percorso, diventano sempre più forti, creando uno scherma mentale forte. Quando
-si hanno connessioni forti in un certo contesto si può generalmente sperimentare un'elasticità mentale minore. Per questo può essere utile fare alcuni esercizi come,
-cambiare strada per tornare a casa o sedersi a tavola in posti diversi da quelli usuali.
-
-Negli anni alcuni scienziati hanno cercato delle prove circa l'illusione del libero arbitrio.
-Benjamin Libet chiese a dei volontari di premere un pulsante che si trovava davanti a loro e, potevano farlo in
-qualsiasi momento, quando lo preferivano. I partecipanti all'esperimento sono stati monitorati con
-un elettroencefalogramma. Il risultato fu che l'attività cerebrale nota come 'potenziale di prontezza' (Bereitschaftspotential) emerge circa 550ms prima dell’azione, mentre la consapevolezza della volontà nasce circa 200ms prima del movimento.
-Forse può sembrare un tempo irrisorio, ma per il sistema nervoso, dove le informazioni viaggiano a centinaia di metri
-al secondo è un tempo importante. Nel 2008, uno studio\endnote{C. S. Soon,
-"Unconscious determinants of free decisions in the human brain", Nature
-Neuroscience} con fMRI ha identificato attività corticali (in corteccia prefrontale e parietale) che permettevano di predire la scelta (pulsante destro o sinistro) fino a 10 secondi prima della consapevolezza della decisione.
+Negli anni alcuni scienziati hanno cercato delle prove sull'illusione del libero arbitrio.
+Benjamin Libet chiese a dei volontari, monitorati con un elettroencefalogramma, di premere un pulsante che si trovava davanti a loro, nel momento che preferivano. Il risultato fu che l'attività cerebrale nota come 'potenziale di prontezza', emerge circa 550ms prima dell’azione, mentre la consapevolezza della volontà nasce circa 200ms prima del movimento.
+Forse può sembrare un tempo irrisorio, ma per il sistema nervoso, dove le informazioni viaggiano a centinaia di metri al secondo è un tempo importante. Nel 2008, uno studio\endnote{C. S. Soon, "Unconscious determinants of free decisions in the human brain", Nature Neuroscience} con fMRI ha identificato attività corticali che permettevano di predire la scelta (pulsante destro o sinistro) fino a 10 secondi prima della consapevolezza della decisione.
  
 A seguito di questi esperimenti, psicologi come Daniel Wegner hanno sviluppato teorie secondo cui la percezione della nostra volontà cosciente di agire potrebbe, in alcuni contesti, essere un'esperienza che segue, piuttosto che precedere, l'avvio inconscio dell'azione da parte del cervello.
-Il cervello integra stimoli ambientali e predisposizioni biologiche/genetiche (che non possiamo scegliere) nella formazione degli schemi mentali che influenzano le decisioni. Secondo alcune interpretazioni (es. Wegner), il senso di volontà è posteriore alla decisione inconscia; tuttavia Libet stesso ha evidenziato il ruolo del 'veto cosciente' che può inibire un'azione già avviata.
+Il cervello integra stimoli ambientali e predisposizioni biologiche/genetiche (che non possiamo scegliere) nella formazione degli schemi mentali che influenzano le decisioni. Tuttavia Libet ha evidenziato il ruolo del 'veto cosciente' che può inibire un'azione già avviata.
 
-Se hai avuto la fortuna, la casualità, di vivere in un ambiente che ti ha fornito condizionamenti positivi, che ha
-permesso lo sviluppo di certe connessioni neuronali, sarai più avvantaggiato rispetto a una persona che, sempre
-casualmente, è cresciuta in un ambiente che gli ha fornito uno schema mentale potenzialmente meno adattivo o che può generare maggiore sofferenza. A questo va aggiunto una componente genetica anch'essa ereditata dal caso, su cui non
-abbiamo potuto avere controllo. E come vedremo successivamente non accettare questi schemi, ignorarli, fare finta che
-non esistano, può portare a problemi.
+Premere un pulsante è un operazione semplice, molto soggetta ad automatismi e, che rendono questo esperimento non risolutivo sulla domanda del libero arbitrio. Potete trovare questo esperimento e molti altri all'interno della serie Mind Field\endnote{\raggedright\url{https://www.youtube.com/watch?v=lmI7NnMqwLQ}}.
 
-Anche questo esperimento va visto nella giusta prospettiva, nella sua “via di Mezzo”. Premere un pulsante è un
-operazione semplice, molto soggetta ad automatismi e, grazie ai neuroni specchio che permettono al cervello di attivare aree cerebrali simili sia durante l'esecuzione di una determinata azione sia nel momento dell'osservazione o del pensiero di essa, facilitando l'apprendimento e l'empatia. Potete trovare questo esperimento e
-molti altri all'interno della serie Mind
-Field\endnote{\raggedright\url{https://www.youtube.com/watch?v=lmI7NnMqwLQ}}.
 
-Un altro esperimento interessante è stato svolto in America nel periodo John Kerry e George W. Bush. Sono stati presi
-due gruppi di cittadini, democratici e repubblicani, a cui sono stati mostrati dei video, dove i due politici cadevano
-in evidenti contraddizioni. I democratici percepivano le contraddizioni del presidente repubblicano. Non percepivano
-le contraddizioni del politico democratico. E viceversa succedeva per i repubblicani. Non solo perché le persone
-sottoposte all'esperimento esprimevano verbalmente questa sensazione, ma anche a livello celebrale
-che è stato monitorato grazie all'uso dell'elettroencefalogramma.
 
-Altro esperimento interessante, svolto in un'università americana: Sono state prese delle
-matricole, ragazzi appena iscritti, che ancora non conoscevano i professori che avrebbero avuto durante
-l'anno. I ricercatori hanno mostrato ai ragazzi brevi video di trenta secondi circa, dei
-professori che avrebbero avuto durante l'anno e, in base a questi, di fare una classifica dei
-docenti migliori, in base a questa prima impressione. A fine anno, i ragazzi hanno avuto modo di conoscere davvero i
-professori visti in quei video, ed è stato chiesto loro di rifare nuovamente la classifica dei professori più bravi.
-Questa volta con cognizione di causa. Il risultato fu che la classifica è rimasta sostanzialmente invariata. Anche in
-questo caso, la prima impressione, il pregiudizio inconscio ha avuto un influenza sulla mente conscia e la parola. Prima arriva
-la sensazione e poi la consapevolezza e la parola\endnote{\raggedright\url{https://www.youtube.com/watch?v=NHB-qw9XlXI}}.
+
+
+
+
+
+
 Generalizzando, noi agiamo e successivamente giustifichiamo il nostro agire, come se l'avessimo
 scelto noi. Questo fenomeno è stato osservato anche in un esperimento che coinvolgeva un bar dove principalmente si
 vendevano bibite gassate. Cambiando la disposizione dei prodotti e dell'arredamento in modo da
